--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "cocoders/file-archive": "dev-master@dev"
+        "cocoders/file-archive": "dev-master@dev",
+        "knplabs/knp-gaufrette-bundle": "0.2.*@dev",
+        "knplabs/gaufrette": "0.2.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
