Added web bundle

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,8 +1,4 @@
-cocoders_console_command:
-    resource: "@CocodersConsoleCommandBundle/Resources/config/routing.xml"
-    prefix:   /
-
-cocoders_core:
-    resource: "@CocodersCoreBundle/Resources/config/routing.xml"
+cocoders_web:
+    resource: "@CocodersWebBundle/Resources/config/routing.xml"
     prefix:   /
 
